@@ -1735,6 +1735,14 @@ def test_autodoc_TypeVar(app):
         '   :module: target.typevar',
         '',
         '',
+        '   .. py:attribute:: Class.T1',
+        '      :module: target.typevar',
+        '',
+        '      T1',
+        '',
+        "      alias of TypeVar('T1')",
+        '',
+        '',
         '   .. py:attribute:: Class.T6',
         '      :module: target.typevar',
         '',
@@ -1750,12 +1758,14 @@ def test_autodoc_TypeVar(app):
         '',
         "   alias of TypeVar('T1')",
         '',
+        '',
         '.. py:data:: T3',
         '   :module: target.typevar',
         '',
         '   T3',
         '',
         "   alias of TypeVar('T3', int, str)",
+        '',
         '',
         '.. py:data:: T4',
         '   :module: target.typevar',
@@ -1764,12 +1774,14 @@ def test_autodoc_TypeVar(app):
         '',
         "   alias of TypeVar('T4', covariant=True)",
         '',
+        '',
         '.. py:data:: T5',
         '   :module: target.typevar',
         '',
         '   T5',
         '',
         "   alias of TypeVar('T5', contravariant=True)",
+        '',
         '',
         '.. py:data:: T6',
         '   :module: target.typevar',
