@@ -85,3 +85,18 @@ def test_autoattribute_NewType(app):
         '   alias of :class:`int`',
         '',
     ]
+
+
+@pytest.mark.sphinx('html', testroot='ext-autodoc')
+def test_autoattribute_TypeVar(app):
+    actual = do_autodoc(app, 'attribute', 'target.typevar.Class.T1')
+    assert list(actual) == [
+        '',
+        '.. py:attribute:: Class.T1',
+        '   :module: target.typevar',
+        '',
+        '   T1',
+        '',
+        "   alias of TypeVar('T1')",
+        '',
+    ]
